# future-purpose-learn-to-code-2.0

./: .gitignore  README.md  bank_oop.py  pyproject.toml
Class_1_Dec_03_2024/: conditional_statement.py  first_class.py  functions.py  loops.py
Class_1_OfficeHour_Dec_05_2024/: README.md  bank-oop-assignment.md  bank_account.py  oop.py  oop_2.py  readme.md  solution.py
Class_2_FastAPI_DEC_23_2024/: FastAPI_Assignment.py  README.md  assignment.md  assignment.py  data.py  main.py  validators.py
Kess_Future_Purpose/: bank_class(optional).py
kess/: index.py
