[tool.poetry]
name = "future purpose learn to code 2-0"
version = "0.1.0"
description = ""
authors = ["Oluwadamilare EZEKIEL <joshezekiel.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "future purpose learn to code 2.0"}]

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"